--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ We do not collect, store, or share personally identifiable information.</p>
 <p>We reserve the right to update this privacy policy at any time. We recommend that you review this page periodically to stay informed.</p>
 
 <h2>Contact</h2>
-<p>If you have any questions about this privacy policy, you can contact us at: <strong>[YOUR EMAIL]</strong></p>
+<p>If you have any questions about this privacy policy, you can contact us at: <strong>ym21studio@gmail.com</strong></p>
 </body>
 </html>
+
