--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ color: #1a73e8;
 <h1>Privacy Policy</h1>
 <p><strong>Last updated:</strong> August 2025</p>
 
-<p>This application, developed by <strong>[YOUR NAME OR ALIAS]</strong>, respects the privacy of its users.
+<p>This application, developed by <strong>21YMStudio</strong>, respects the privacy of its users.
 We do not collect, store, or share personally identifiable information.</p>
 
 <h2>Information We Collect</h2>
@@ -50,4 +50,5 @@ We do not collect, store, or share personally identifiable information.</p>
 <p>If you have any questions about this privacy policy, you can contact us at: <strong>ym21studio@gmail.com</strong></p>
 </body>
 </html>
+
 
